# mobilecomputing-miniproject

./: .gitignore  README.md  planning_revised.md  pyproject.toml  requirements.txt
android-app/: settings.gradle.kts
android-app/app/: build.gradle.kts  proguard-rules.pro
android-app/app/src/androidTest/java/com/example/kwsapp/: SmokeUiTest.kt
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/assets/: README.md
android-app/app/src/main/java/com/example/kwsapp/: MainActivity.kt
android-app/app/src/main/java/com/example/kwsapp/inference/: KeywordSpotter.kt  MfccExtractor.kt  PredictionResult.kt  RealtimeKeywordSpotter.kt  WavReader.kt
android-app/app/src/main/res/values/: themes.xml
android-app/app/src/test/java/com/example/kwsapp/: MfccExtractorTest.kt
configs/: default_config.json  quant_calib_2000.json
docs/: development_handover.md  experiment_template.md  presentation_report.md  reproducibility.md  week4_kws_accuracy_sensitivity_patch.md
kws/: __init__.py  audio.py  benchmark.py  class_weights.py  config.py  constants.py  eval.py  features.py  qat.py  train.py  utils.py
kws/data/: __init__.py  dataset.py  manifest.py  prepare.py
kws/export/: tflite.py
kws/models/: __init__.py  ds_cnn.py  factory.py  small_cnn.py
scripts/: copy_model_to_android_assets.sh
tests/: conftest.py  test_class_weights.py  test_prepare.py  test_tflite_export.py
