[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kws-week1-3"
version = "0.1.0"
description = "Week1-3 pipeline for Android keyword spotting"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "tensorflow>=2.21,<2.22",
  "numpy>=1.24",
  "scipy>=1.11",
  "scikit-learn>=1.4",
  "matplotlib>=3.8",
  "kagglehub>=0.3",
  "PyYAML>=6.0",
  "tensorflow-model-optimization>=0.8,<0.9",
]

[tool.setuptools.packages.find]
include = ["kws*"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
